# beets-soundcloud

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
beetsplug/: soundcloud.py
tests/: test_soundcloud.py
